Fix homepage jumbotron too small

--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -170,7 +170,6 @@ h3 {
         transform: translate(-50%, -50%);
         padding: 5rem 7.5rem;
         width: 50vw;
-        height: 0;
         max-width: none;
         min-width: 67rem;
     }
